animation plus visible et bug de this.wordclick résolu

--- a/src/style.scss
+++ b/src/style.scss
@@ -127,13 +127,13 @@ h1 {
 
 @keyframes spin {
     0% {
-        box-shadow: -2px 2px green, 2px 1px gold;
+        box-shadow: -4px 4px green, 4px 2px gold;
     }
     33% {
-        box-shadow: 1px 2px white, 2px 2px orangered;
+        box-shadow: 2px 4px white, 4px 4px orangered;
     }
     66% {
-        box-shadow: 2px -2px lightblue, -1px 2px crimson;
+        box-shadow: 4px -4px lightblue, -2px 4px crimson;
     }
     100% {
         box-shadow: 0px 0px white, 0px 0px white;
